--- a/.github/workflows/biweekly_dbt_v1.3.0_redshift_build_full_refresh.yml
+++ b/.github/workflows/biweekly_dbt_v1.3.0_redshift_build_full_refresh.yml
@@ -23,19 +23,19 @@ jobs:
       - name: dbt-deps
         uses: mwhitaker/dbt-action@v1.3.0
         with:
-          dbt_command: "dbt deps --profiles-dir ./profiles/redshift"
+          dbt_command: "dbt deps --profiles-dir ./integration_tests/profiles/redshift"
 
           
       - name: dbt-debug
         uses: mwhitaker/dbt-action@v1.3.0
         with:
-          dbt_command: "dbt debug --profiles-dir ./profiles/redshift"
+          dbt_command: "dbt debug --profiles-dir ./integration_tests/profiles/redshift"
 
 
       - name: dbt-build
         uses: mwhitaker/dbt-action@v1.3.0
         with:
-          dbt_command: 'dbt build --full-refresh --profiles-dir ./profiles/redshift --vars {"tuva_database":"dev_ci_testing","input_database":"dev_ci_testing","input_schema":"claims_common"}'
+          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/redshift --vars {"tuva_database":"dev_ci_testing","input_database":"dev_ci_testing","input_schema":"claims_common"}'
 
 
       - name: Get the result
