--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,14 +1,15 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'my_new_project'
-version: '1.0.0'
+name: 'elation__connector'
+version: '0.0.1'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
+
+vars:
+  tuva_marts_enabled: false
+  
 # These configurations specify where dbt should look for different types of files.
 # The `source-paths` config, for example, states that models in this project can be
 # found in the "models/" directory. You probably won't need to change these!
@@ -24,15 +25,3 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/ directory
-# as tables. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
-models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      materialized: view
