--- a/models/_sources.yml
+++ b/models/_sources.yml
@@ -3,9 +3,8 @@ version: 2
 sources:
   - name: elation
     database: elation
-    schema:  herself_health
+    schema:  raw
     tables:
-      - name: appointment
       - name: bill
       - name: bill_item
       - name: bill_item_dx
@@ -16,23 +15,13 @@ sources:
       - name: med_order
       - name: med_order_fill
       - name: medication_rxnorm
-      - name: misc_orders
       - name: patient
-      - name: patient_allergy
-      - name: patient_allergy_rxnorm
-      - name: patient_drug_intolerance
-      - name: patient_drug_intolerance_rxnorm
-      - name: patient_history
-      - name: patient_immunization
-      - name: patient_insurance
       - name: patient_phone
       - name: patient_problem
       - name: patient_problem_code
-      - name: patient_tag
       - name: practice
       - name: report
       - name: report_document_tag
-      - name: service_location
       - name: user
       - name: visit_note
       - name: vital
