added vars for source database and schema

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -8,6 +8,8 @@ profile: 'default'
 
 
 vars:
+  input_database: elation
+  input_schema: raw
   tuva_marts_enabled: false
   
 # These configurations specify where dbt should look for different types of files.
