syntax changes for redshift

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -9,7 +9,8 @@ profile: 'default'
 
 vars:
   input_database: elation
-  input_schema: raw
+  input_schema: raw_data
+  
   tuva_marts_enabled: false
   
 # These configurations specify where dbt should look for different types of files.
