--- a/.github/workflows/dbt_v1.4.6_redshift_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_redshift_build_full_refresh.yml
@@ -36,7 +36,7 @@ jobs:
       - name: dbt-build
         uses: mwhitaker/dbt-action@v1.4.6
         with:
-          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/redshift --vars {"tuva_database":"dev_ci_testing","input_database":"dev_ci_testing","input_schema":"claims_common"}'
+          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/redshift --vars {"input_database":"elation","input_schema":"raw_data"}'
 
 
       - name: Get the result
