--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -9,7 +9,7 @@ profile: 'default'
 
 vars:
   input_database: elation
-  input_schema: raw_data
+  input_schema: raw
   
   tuva_marts_enabled: false
   
