--- a/integration_tests/profiles/redshift/profiles.yml
+++ b/integration_tests/profiles/redshift/profiles.yml
@@ -2,7 +2,7 @@ default:
   outputs:
     dev:
       connect_timeout: 120
-      dbname: dev_ci_testing
+      dbname: elation
       host: "{{ env_var('DBT_REDSHIFT_CI_HOST') }}"
       keepalives_idle: 240
       password: "{{ env_var('DBT_REDSHIFT_CI_PASSWORD') }}"
