--- a/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 env:
-  DBT_BIGQUERY_TOKEN: ${{ secrets.TUVA_BIGQUERY_TOKEN }}
+  DBT_BIGQUERY_TOKEN : ${{ secrets.DBT_BIGQUERY_TOKEN  }}
   TUVA_BIGQUERY_PROJECT: ${{ secrets.TUVA_BIGQUERY_PROJECT }}
 
   
