--- a/integration_tests/profiles/bigquery/profiles.yml
+++ b/integration_tests/profiles/bigquery/profiles.yml
@@ -6,7 +6,7 @@ default:
       method: service-account
       keyfile: ./creds.json
       project: "{{ env_var('TUVA_BIGQUERY_PROJECT') }}"
-      dataset: dev-ci-testing
+      dataset: elation
       threads: 4
       timeout_seconds: 300
       location: US
