--- a/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
+++ b/.github/workflows/dbt_v1.4.6_bigquery_build_full_refresh.yml
@@ -32,7 +32,7 @@ jobs:
       - name: dbt-build
         uses: mwhitaker/dbt-action@v1.4.6
         with:
-          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/bigquery  --vars {"input_database":"dev_ci_testing","input_schema":"elation"}'
+          dbt_command: 'dbt build --full-refresh --profiles-dir ./integration_tests/profiles/bigquery  --vars {"input_database":"dev-ci-testing","input_schema":"elation"}'
 
 
       - name: Get the result
