--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -8,8 +8,8 @@ profile: 'default'
 
 
 vars:
-  input_database: dev-ci-testing
-  input_schema: elation
+  input_database: elation
+  input_schema: raw
   
   tuva_marts_enabled: false
   
