--- a/packages.yml
+++ b/packages.yml
@@ -1,5 +1,5 @@
 packages:
-  - package: tuva-health/the_tuva_project
-    version: 0.3.19
+  - git: "https://github.com/tuva-health/the_tuva_project.git"
+    revision: "clinical-support"
   - package: dbt-labs/dbt_utils
     version: 1.1.1
